// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText component closes dialog 1`] = `
<div>
  <div
    class="RichText-root css-1lf5op0"
  >
    <h2
      class="MuiTypography-root MuiTypography-h2 RichText-title css-1gn4sxn-MuiTypography-root"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root MuiTypography-h3 RichText-title css-2221f6-MuiTypography-root"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root MuiTypography-h4 RichText-title css-1x9euu8-MuiTypography-root"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root MuiTypography-h5 RichText-title css-1lhxn1g-MuiTypography-root"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 RichText-title css-1nuwz6u-MuiTypography-root"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"External","action":"https://google.co.uk"}"
        data-testid="rich-text-hyperlink"
        href="https://google.co.uk"
        referrerpolicy="no-referrer"
        rel="noreferrer"
        target="_blank"
      >
        External
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"Entry","action":"/testing-simple-page/"}"
        data-testid="rich-text-entry-hyperlink"
        href="/testing-simple-page/"
      >
        Entry
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"Asset","action":"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"}"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        referrerpolicy="no-referrer"
        rel="noreferrer"
        target="_blank"
      >
        Asset
      </a>
       
      <div
        class="css-1v5x0v5"
      >
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLinkStyles-embeddedLink css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
          data-gtm="{"id":"cta-click1","action":"//product-category-page/product-sub-category-page/aerodek-robust-plus/","label":"Aerodek Robust Plus"}"
          data-testid="internal-button-link-Aerodek-Robust-Plus"
          href="//product-category-page/product-sub-category-page/aerodek-robust-plus/"
          tabindex="0"
        >
          Aerodek Robust Plus
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </div>
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <div
      class="css-1v5x0v5"
    >
      <a
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLinkStyles-embeddedLink css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","action":"//landing-page/","label":"Support"}"
        data-testid="internal-button-link-Support"
        href="//landing-page/"
        tabindex="0"
      >
        Support
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
    </div>
    <picture>
      <source
        sizes="(max-width: 600px) 561px, (max-width: 720px) 665px, (max-width: 840px) 785px, (max-width: 1440px) 916px, 920px"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=920 920w"
        type="image/webp"
      />
      <source
        sizes="(max-width: 600px) 561px, (max-width: 720px) 665px, (max-width: 840px) 785px, (max-width: 1440px) 916px, 920px"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=920 920w"
      />
      <img
        alt="Customer Support"
        class="embedded-asset"
        decoding="async"
        draggable="false"
        loading="lazy"
        src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&fl=progressive&w=920"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=920 920w"
      />
    </picture>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    >
      <button
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium  css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","action":"Dialog","label":"Open dialog"}"
        data-testid="dialog-link-"
        tabindex="0"
        type="button"
      >
        Open dialog
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </p>
  </div>
</div>
`;

exports[`RichText component falls back with incorrect data 1`] = `
<div>
  <div
    class="RichText-root css-1lf5op0"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    />
  </div>
</div>
`;

exports[`RichText component renders correctly 1`] = `
<div>
  <div
    class="RichText-root css-1lf5op0"
  >
    <h2
      class="MuiTypography-root MuiTypography-h2 RichText-title css-1gn4sxn-MuiTypography-root"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root MuiTypography-h3 RichText-title css-2221f6-MuiTypography-root"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root MuiTypography-h4 RichText-title css-1x9euu8-MuiTypography-root"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root MuiTypography-h5 RichText-title css-1lhxn1g-MuiTypography-root"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 RichText-title css-1nuwz6u-MuiTypography-root"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"External","action":"https://google.co.uk"}"
        data-testid="rich-text-hyperlink"
        href="https://google.co.uk"
        referrerpolicy="no-referrer"
        rel="noreferrer"
        target="_blank"
      >
        External
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"Entry","action":"/testing-simple-page/"}"
        data-testid="rich-text-entry-hyperlink"
        href="/testing-simple-page/"
      >
        Entry
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"Asset","action":"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"}"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        referrerpolicy="no-referrer"
        rel="noreferrer"
        target="_blank"
      >
        Asset
      </a>
       
      <div
        class="css-1v5x0v5"
      >
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLinkStyles-embeddedLink css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
          data-gtm="{"id":"cta-click1","action":"//product-category-page/product-sub-category-page/aerodek-robust-plus/","label":"Aerodek Robust Plus"}"
          data-testid="internal-button-link-Aerodek-Robust-Plus"
          href="//product-category-page/product-sub-category-page/aerodek-robust-plus/"
          tabindex="0"
        >
          Aerodek Robust Plus
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </div>
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <div
      class="css-1v5x0v5"
    >
      <a
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLinkStyles-embeddedLink css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","action":"//landing-page/","label":"Support"}"
        data-testid="internal-button-link-Support"
        href="//landing-page/"
        tabindex="0"
      >
        Support
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
    </div>
    <picture>
      <source
        sizes="(max-width: 600px) 561px, (max-width: 720px) 665px, (max-width: 840px) 785px, (max-width: 1440px) 916px, 920px"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=920 920w"
        type="image/webp"
      />
      <source
        sizes="(max-width: 600px) 561px, (max-width: 720px) 665px, (max-width: 840px) 785px, (max-width: 1440px) 916px, 920px"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=920 920w"
      />
      <img
        alt="Customer Support"
        class="embedded-asset"
        decoding="async"
        draggable="false"
        loading="lazy"
        src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&fl=progressive&w=920"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=920 920w"
      />
    </picture>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    >
      <button
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium  css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","action":"Dialog","label":"Open dialog"}"
        data-testid="dialog-link-"
        tabindex="0"
        type="button"
      >
        Open dialog
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </p>
  </div>
</div>
`;

exports[`RichText component renders when dialog clicked 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="RichText-root css-1lf5op0"
  >
    <h2
      class="MuiTypography-root MuiTypography-h2 RichText-title css-1gn4sxn-MuiTypography-root"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root MuiTypography-h3 RichText-title css-2221f6-MuiTypography-root"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root MuiTypography-h4 RichText-title css-1x9euu8-MuiTypography-root"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root MuiTypography-h5 RichText-title css-1lhxn1g-MuiTypography-root"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 RichText-title css-1nuwz6u-MuiTypography-root"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"External","action":"https://google.co.uk"}"
        data-testid="rich-text-hyperlink"
        href="https://google.co.uk"
        referrerpolicy="no-referrer"
        rel="noreferrer"
        target="_blank"
      >
        External
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"Entry","action":"/testing-simple-page/"}"
        data-testid="rich-text-entry-hyperlink"
        href="/testing-simple-page/"
      >
        Entry
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
        data-gtm="{"id":"cta-click1","label":"Asset","action":"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"}"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        referrerpolicy="no-referrer"
        rel="noreferrer"
        target="_blank"
      >
        Asset
      </a>
       
      <div
        class="css-1v5x0v5"
      >
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLinkStyles-embeddedLink css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
          data-gtm="{"id":"cta-click1","action":"//product-category-page/product-sub-category-page/aerodek-robust-plus/","label":"Aerodek Robust Plus"}"
          data-testid="internal-button-link-Aerodek-Robust-Plus"
          href="//product-category-page/product-sub-category-page/aerodek-robust-plus/"
          tabindex="0"
        >
          Aerodek Robust Plus
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </div>
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <div
      class="css-1v5x0v5"
    >
      <a
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLinkStyles-embeddedLink css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","action":"//landing-page/","label":"Support"}"
        data-testid="internal-button-link-Support"
        href="//landing-page/"
        tabindex="0"
      >
        Support
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
    </div>
    <picture>
      <source
        sizes="(max-width: 600px) 561px, (max-width: 720px) 665px, (max-width: 840px) 785px, (max-width: 1440px) 916px, 920px"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=webp&q=50&w=920 920w"
        type="image/webp"
      />
      <source
        sizes="(max-width: 600px) 561px, (max-width: 720px) 665px, (max-width: 840px) 785px, (max-width: 1440px) 916px, 920px"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?q=50&w=920 920w"
      />
      <img
        alt="Customer Support"
        class="embedded-asset"
        decoding="async"
        draggable="false"
        loading="lazy"
        src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&fl=progressive&w=920"
        srcset="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=561 561w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=665 665w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=785 785w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=916 916w, https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png?fm=png&q=50&w=920 920w"
      />
    </picture>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
      data-testid="typography"
    >
      <button
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium  css-1t4t4pf-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","action":"Dialog","label":"Open dialog"}"
        data-testid="dialog-link-"
        tabindex="0"
        type="button"
      >
        Open dialog
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </p>
  </div>
</div>
`;

exports[`RichText component renders with no data 1`] = `<div />`;
